<resources>
    //颜色
    <string name="colorWhite">#ffffff</string>
    <string name="colorTransWithe">#ccffffff</string>
    <string name="colorBlack">#000000</string>
    <string name="colorAsh">#535353</string>


    <string name="app_name">搭理搭理</string>
    <string name="app_name_en">dildil</string>
    <string name="language_cn">中文</string>
    <string name="language_en">English</string>
    <string name="search">搜索</string>
    <string name="Ranking_List">排行榜</string>
    <string name="see_every_week">每周必看</string>
    <string name="Must_brush_when_entering_the_station">入站必刷</string>
    <string name="topic_of_conversation">话题</string>
    <string name="Search_for_heat">热搜</string>
    <string name="Search_history">搜索历史</string>
    <string name="forward">转发</string>
    <string name="isThumbsUp">投币同时是否点赞</string>
    <string name="conductCoin">点击进行投币</string>
    <string name="PlayNow">立即播放</string>
    <string name="SendTheBarrage">点我发送弹幕</string>
    <string name="EnterComments">发条友善的评论</string>
    <string name="Release">发布</string>
    <string name="BulletScreenTips">发个友善的弹幕见证当下</string>
    <string name="DoubleSpeed">倍速</string>
    <string name="Automatic">自动</string>
    <string name="SaySomething">说点什么吧…</string>
    <string name="warning">未经作者授权禁止转载</string>
    <string name="RecentChannels">最近看过的频道</string>
    <string name="RecentVisit">最近访问</string>
    <string name="MyPursuit_Drama">我的追番:追剧</string>
    <string name="cancel">取消</string>
    <string name="EverybodySearching">大家都在搜</string>
    <string name="enter_correct_password">请正确输入密码</string>
    <string name="PasswordLogin">密码登录</string>
    <string name="MessageLogin">短信登陆</string>
    <string name="Account">账号</string>
    <string name="LoginPrompt">请输入账号或邮箱</string>
    <string name="Password">密码</string>
    <string name="LoginPromptPassword">请输入密码</string>
    <string name="ForgetThePassword">忘记密码？</string>
    <string name="Register">注册</string>
    <string name="Login">登录</string>
    <string name="Tips_one">登录即代表你同意 用户协议 和 隐私政策</string>
    <string name="Tips_two">遇到问题？查看帮助</string>
    <string name="please_input_phonenumber">请输入手机号码</string>
    <string name="please_input_phonenumber_correctly">请输入有效的电话号码</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="pwd_must_less_than_30">请输入小于20位的密码</string>
    <string name="login_fail">登录失败，请稍后重试</string>
    <string name="pwd_wrong">密码输入错误，请重试</string>
    <string name="MyPursuit">我的追番</string>
    <string name="Seemore">查看更多</string>
    <string name="FanRecommendation">番剧推荐</string>
    <string name="userIntroduce">用户介绍</string>
    <string name="EditingMaterials">编辑资料</string>
    <string name="loginWarning">警告</string>
    <string name="thisAccountHasSigned">此账号已在别处登录</string>
    <string name="determine">确定</string>
    <string name="networkError">当前网络状况不佳，请稍后重试</string>
    <string name="errorOccurred">出现错误:</string>
    <string name="saveProgress">已为您保存播放进度</string>
    <string name="trafficWarning">您在使用数据进行观看，是否继续</string>
    <string name="versionUpdate">版本更新</string>
    <string name="update">更 新</string>
    <string name="setUp">设置</string>
    <string name="detectUpdates">检测更新</string>
    <string name="logOut">退出登录</string>
    <string name="updateContent">更新内容</string>
    <string name="newComment">最新评论</string>
    <string name="accordingToTime">=按时间</string>
    <string name="live_message">TA现在还没有直播，去订阅TA的直播</string>
    <string name="all_contribute">全部投稿</string>
    <string name="go_to_look">进去看看 ></string>
    <string name="coins_video">最近投硬币的视频</string>
    <string name="ta_quanzi">TA的圈子</string>
    <string name="ta_play_game">TA玩的游戏</string>
    <string name="vip_message_1">您还不是</string>
    <string name="vip">大会员</string>
    <string name="vip_message_2">哦</string>
    <string name="vip_message_3">黑科技在召唤</string>
    <string name="immediately_opened">立即开通</string>
    <string name="about_menu_action_share">分享</string>
    <string name="bangumi_follow">追番</string>
    <string name="cache">缓存</string>
    <string name="selection">选集</string>
    <string name="please_contract_me">请承包我吧</string>
    <string name="have_been_contracting_out_of_me">已有383人承包了这部番</string>
    <string name="contract">承包</string>
    <string name="contract_text">等34人七日内承包了这部番</string>
    <string name="look_top_list">查看榜单</string>
    <string name="introduction">简介</string>
    <string name="more">更多</string>
    <string name="bangumi_recommend">番剧推荐</string>
    <string name="creativeCenter">创作中心</string>
    <string name="recommendationService">推荐服务</string>
    <string name="moreService">更多服务</string>

</resources>