<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_130"
        android:layout_margin="@dimen/dp_10"
        app:cardBackgroundColor="@color/While"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ic_pay_bangumi_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="@dimen/dp_10"
                android:src="@mipmap/ic_pay_bangumi_tips" />


            <TextView
                android:id="@+id/tv_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_toEndOf="@+id/ic_pay_bangumi_tips"
                android:paddingTop="5dp"
                android:text="@string/please_contract_me"
                android:textColor="@color/yellow_30"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pay"
                android:layout_toEndOf="@+id/ic_pay_bangumi_tips"
                android:text="@string/have_been_contracting_out_of_me"
                android:textColor="@color/yellow_30"
                android:textSize="12sp" />


            <TextView
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_30"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@color/yellow_30"
                android:gravity="center"
                android:text="@string/contract"
                android:textColor="@color/While"
                android:textSize="14sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/ic_pay_bangumi_tips"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="#e6e6e6" />


            <RelativeLayout
                android:id="@+id/user_avatar_layout"
                android:layout_width="@dimen/dp_80"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_gravity="center|start"
                    android:src="@mipmap/ic_avatar1" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="@dimen/dp_15"
                    android:src="@mipmap/ic_avatar2" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="@dimen/dp_30"
                    android:src="@mipmap/ic_avatar3" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="@dimen/dp_45"
                    android:src="@mipmap/ic_avatar4" />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_toEndOf="@+id/user_avatar_layout"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/contract_text"
                android:textColor="@color/black_alpha_45"
                android:textSize="12sp" />


            <TextView
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_25"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/comment_dialog_et_selector"
                android:gravity="center"
                android:text="@string/look_top_list"
                android:textColor="@color/yellow_30"
                android:textSize="12sp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</merge>