<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_300"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/Pink"
                app:statusBarScrim="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/ic_vip_header_bg"
                    android:fitsSystemWindows="true">

                    <ImageView
                        android:id="@+id/vip_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/dp_80"
                        android:src="@mipmap/ic_vip_open" />

                    <LinearLayout
                        android:id="@+id/vip_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/vip_image"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vip_message_1"
                            android:textColor="@color/While"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_3"
                            android:layout_marginEnd="@dimen/dp_3"
                            android:text="@string/vip"
                            android:textColor="@color/While"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vip_message_2"
                            android:textColor="@color/While"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/vip_layout"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/dp_3"
                        android:text="@string/vip_message_3"
                        android:textColor="@color/While"
                        android:textSize="12sp" />


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/dp_10"
                        android:background="#FEB1B3"
                        android:text="@string/immediately_opened"
                        android:textColor="#FE6F70"
                        android:textSize="14sp" />

                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/AppTheme.PopupOverlay"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    app:layout_collapseMode="pin">

                    <RelativeLayout
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/keyboard"
                            android:layout_width="@dimen/dp_24"
                            android:layout_height="@dimen/dp_24"
                            android:layout_centerVertical="true"
                            android:src="@drawable/keyboard_backspace_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_toEndOf="@+id/keyboard"
                            android:text="@string/vip"
                            android:textColor="@color/While"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:scrollbars="none" />

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>