<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/Ranking_List_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/Ranking_List"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_centerHorizontal="true"
            android:background="@drawable/file_background_circular_pink">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_centerInParent="true"
                android:src="@mipmap/ranking_list" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Ranking_List"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/Ranking_List"
            android:textColor="#757575"
            android:textSize="13sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/Must_see_every_week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/Notice"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_centerHorizontal="true"
            android:background="@drawable/file_background_circular_orange">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_centerInParent="true"
                android:src="@mipmap/notice" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Notice"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/see_every_week"
            android:textColor="#757575"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Inbound_brush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/Medal"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_centerHorizontal="true"
            android:background="@drawable/file_background_circular_oranges">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_centerInParent="true"
                android:src="@mipmap/medal" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Medal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/Must_brush_when_entering_the_station"
            android:textColor="#757575"
            android:textSize="13sp" />
    </RelativeLayout>
</LinearLayout>